Use fixed to avoid scrollbars

--- a/src/main/webapp/scss/site.scss
+++ b/src/main/webapp/scss/site.scss
@@ -108,7 +108,7 @@ main {
     background-image: url("../assets/cars.jpg");
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     opacity: 0.15;
   }
 }
